--- a/public/__forms.html
+++ b/public/__forms.html
@@ -1,10 +1,15 @@
-<form name="contact" data-netlify="true" netlify-honeypot="bot-field" hidden>
-  <input type="hidden" name="form-name" value="contact" />
-  <input type="text" name="bot-field" />
-  <input type="text" name="name" />
-  <input type="text" name="company" />
-  <input type="email" name="email" />
-  <input type="text" name="phone" />
-  <textarea name="message"></textarea>
-  <input type="checkbox" name="consent" />
-</form>
+<html>
+  <head></head>
+  <body>
+    <form name="contact" data-netlify="true" netlify-honeypot="bot-field" hidden>
+      <input type="hidden" name="form-name" value="contact" />
+      <input type="text" name="bot-field" />
+      <input type="text" name="name" />
+      <input type="text" name="company" />
+      <input type="email" name="email" />
+      <input type="text" name="phone" />
+      <textarea name="message"></textarea>
+      <input type="checkbox" name="consent" />
+    </form>
+  </body>
+</html>
